--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1 class="text-4xl text-blue-600 font-bold m-2">Bon Voyage</h1>
+<h1 class="text-4xl text-blue-800">
+  Bon<span class="text-blue-400">Voyage</span>
+</h1>
+
+<app-login />
 <router-outlet />
+
 
