--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="flex justify-center m-4">
   <div class="flex flex-col items-center w-full md:w-1/3 gap-4">
-    <h2 class="font-bold text-xl self-start">Sign in to BonVoyage</h2>
+    <h2 class="font-bold text-xl self-start">Sign Up to BonVoyage</h2>
     <button class="btn rounded-full w-full"
             (click)="signInWithGoogle()">
       <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none" role="img"
@@ -18,10 +18,10 @@
               d="M8.99976 3.57955C10.3211 3.57955 11.5075 4.03364 12.4402 4.92545L15.0216 2.34409C13.4629 0.891818 11.4257 0 8.99976 0C5.48158 0 2.43794 2.01682 0.957031 4.95818L3.96385 7.29C4.67158 5.16273 6.65567 3.57955 8.99976 3.57955Z"
               fill="#EA4335"></path>
       </svg>
-      Sign in with Google
+      Sign up with Google
     </button>
-    <div class="divider">or sign in with email</div>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="flex flex-col w-full">
+    <div class="divider">or sign up with email</div>
+    <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()" class="flex flex-col w-full">
       <mat-form-field>
         <mat-label>Enter your email</mat-label>
         <input matInput
@@ -31,7 +31,7 @@
       </mat-form-field>
 
       <mat-form-field>
-        <mat-label>Enter your password</mat-label>
+        <mat-label>Enter a password</mat-label>
         <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                 [attr.aria-pressed]="hide">
@@ -39,14 +39,15 @@
         </button>
       </mat-form-field>
 
-      <button type="submit" [disabled]="!loginForm.valid" class="btn rounded-full">Sign In</button>
+      <button type="submit" [disabled]="!signUpForm.valid" class="btn rounded-full">Register Now</button>
     </form>
-    <p class="text-gray-400">Dont have an account?
-      <button class="underline text-slate-950" (click)="navToSignUp()">
-        Sign Up
+    <p class="text-gray-400">Already have an account?
+      <button class="underline text-slate-950" (click)="navToLogIn()">
+        Log In
       </button>
     </p>
   </div>
 </div>
+
 
 
