--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,23 @@
-<h1 class="text-4xl text-blue-800">
-  Bon<span class="text-blue-400">Voyage</span>
-</h1>
-
-<!--<app-login />-->
+<p>
+  <mat-toolbar class="flex justify-between ">
+    <div class="flex items-center">
+      <button mat-icon-button aria-label="Menu button">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <button class="text-blue-800" (click)="navToHome()">
+        Bon<span class="text-blue-400">Voyage</span>
+      </button>
+    </div>
+    <div class="flex gap-4">
+      <button class="text-sm" aria-label="Log in button" (click)="navToLogin()">
+        Log In
+      </button>
+      <button class="btn bg-blue-400" aria-label="Sign up button" (click)="navToSignup()">
+        Sign Up
+      </button>
+    </div>
+  </mat-toolbar>
+</p>
 <router-outlet />
 
 
