--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center m-4">
+<div class="flex justify-center m-4 mt-8">
   <div class="flex flex-col items-center w-full md:w-1/3 gap-4">
     <h2 class="font-bold text-xl self-start">Sign Up to BonVoyage</h2>
     <button class="btn rounded-full w-full"
@@ -28,6 +28,7 @@
                placeholder="johnDoe@example.com"
                formControlName="email"
                required>
+        <mat-error>Please enter a valid Email address.</mat-error>
       </mat-form-field>
 
       <mat-form-field>
@@ -37,6 +38,17 @@
                 [attr.aria-pressed]="hide">
           <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
         </button>
+        <mat-error>Invalid password.</mat-error>
+      </mat-form-field>
+
+      <mat-form-field>
+        <mat-label>Confirm password</mat-label>
+        <input matInput [type]="hide ? 'password' : 'text'" formControlName="confirmPassword" required>
+        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                [attr.aria-pressed]="hide">
+          <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+        </button>
+        <mat-error>Passwords do not match.</mat-error>
       </mat-form-field>
 
       <button type="submit" [disabled]="!signUpForm.valid" class="btn rounded-full">Register Now</button>
