--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,58 +1,90 @@
 <div class="flex justify-center m-4 mt-8">
-    <mat-card class="w-full md:w-1/2">
-      <mat-card-content>
-        <div class="flex flex-col gap-6 p-4 md:p-10">
-          <h2 class="font-bold text-xl self-start">Log in to BonVoyage</h2>
-          <button class="btn rounded-full w-full"
-                  (click)="signInWithGoogle()">
-            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none" role="img"
-                 class="icon ">
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M17.64 9.20419C17.64 8.56601 17.5827 7.95237 17.4764 7.36328H9V10.8446H13.8436C13.635 11.9696 13.0009 12.9228 12.0477 13.561V15.8192H14.9564C16.6582 14.2524 17.64 11.9451 17.64 9.20419Z"
-                    fill="#4285F4"></path>
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M8.99976 18C11.4298 18 13.467 17.1941 14.9561 15.8195L12.0475 13.5613C11.2416 14.1013 10.2107 14.4204 8.99976 14.4204C6.65567 14.4204 4.67158 12.8372 3.96385 10.71H0.957031V13.0418C2.43794 15.9831 5.48158 18 8.99976 18Z"
-                    fill="#34A853"></path>
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M3.96409 10.7098C3.78409 10.1698 3.68182 9.59301 3.68182 8.99983C3.68182 8.40664 3.78409 7.82983 3.96409 7.28983V4.95801H0.957273C0.347727 6.17301 0 7.54755 0 8.99983C0 10.4521 0.347727 11.8266 0.957273 13.0416L3.96409 10.7098Z"
-                    fill="#FBBC05"></path>
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M8.99976 3.57955C10.3211 3.57955 11.5075 4.03364 12.4402 4.92545L15.0216 2.34409C13.4629 0.891818 11.4257 0 8.99976 0C5.48158 0 2.43794 2.01682 0.957031 4.95818L3.96385 7.29C4.67158 5.16273 6.65567 3.57955 8.99976 3.57955Z"
-                    fill="#EA4335"></path>
-            </svg>
-            Log in with Google
-          </button>
-          <div class="divider">or log in with email</div>
-          <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="flex flex-col w-full">
-            <mat-form-field>
-              <mat-label>Enter your email</mat-label>
-              <input matInput
-                     placeholder="johnDoe@example.com"
-                     formControlName="email"
-                     required>
-              <mat-error>Please enter a valid Email address.</mat-error>
-            </mat-form-field>
-
-            <mat-form-field>
-              <mat-label>Enter your password</mat-label>
-              <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
-              <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                      [attr.aria-pressed]="hide">
-                <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
-              </button>
-              <mat-error>Your password should contain at least 8 characters.</mat-error>
-            </mat-form-field>
-
-            <button type="submit" [disabled]="!loginForm.valid" class="btn rounded-full">Log In</button>
-          </form>
-          <p class="text-gray-400">Dont have an account?
-            <button class="underline text-slate-950 hover:text-slate-700 hover:scale-105" (click)="navToSignUp()">
-              Sign Up
+  <mat-card class="w-full md:w-1/2">
+    <mat-card-content>
+      <div class="flex flex-col gap-6 p-4 md:p-12">
+        <h2 class="font-bold text-xl self-start">Log in to BonVoyage</h2>
+        <button class="btn rounded-full w-full" (click)="signInWithGoogle()">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="18"
+            height="18"
+            viewBox="0 0 18 18"
+            fill="none"
+            role="img"
+            class="icon">
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M17.64 9.20419C17.64 8.56601 17.5827 7.95237 17.4764 7.36328H9V10.8446H13.8436C13.635 11.9696 13.0009 12.9228 12.0477 13.561V15.8192H14.9564C16.6582 14.2524 17.64 11.9451 17.64 9.20419Z"
+              fill="#4285F4"></path>
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M8.99976 18C11.4298 18 13.467 17.1941 14.9561 15.8195L12.0475 13.5613C11.2416 14.1013 10.2107 14.4204 8.99976 14.4204C6.65567 14.4204 4.67158 12.8372 3.96385 10.71H0.957031V13.0418C2.43794 15.9831 5.48158 18 8.99976 18Z"
+              fill="#34A853"></path>
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M3.96409 10.7098C3.78409 10.1698 3.68182 9.59301 3.68182 8.99983C3.68182 8.40664 3.78409 7.82983 3.96409 7.28983V4.95801H0.957273C0.347727 6.17301 0 7.54755 0 8.99983C0 10.4521 0.347727 11.8266 0.957273 13.0416L3.96409 10.7098Z"
+              fill="#FBBC05"></path>
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M8.99976 3.57955C10.3211 3.57955 11.5075 4.03364 12.4402 4.92545L15.0216 2.34409C13.4629 0.891818 11.4257 0 8.99976 0C5.48158 0 2.43794 2.01682 0.957031 4.95818L3.96385 7.29C4.67158 5.16273 6.65567 3.57955 8.99976 3.57955Z"
+              fill="#EA4335"></path>
+          </svg>
+          Log in with Google
+        </button>
+        <div class="divider">or log in with email</div>
+        <form
+          [formGroup]="loginForm"
+          (ngSubmit)="onSubmit()"
+          class="flex flex-col w-full gap-4">
+          <mat-form-field>
+            <mat-label>Enter your email</mat-label>
+            <input
+              matInput
+              placeholder="johnDoe@example.com"
+              formControlName="email"
+              required />
+            <mat-error>Please enter a valid Email address.</mat-error>
+          </mat-form-field>
+          <mat-form-field>
+            <mat-label>Enter your password</mat-label>
+            <input
+              matInput
+              [type]="hide ? 'password' : 'text'"
+              formControlName="password"
+              required />
+            <button
+              mat-icon-button
+              matSuffix
+              (click)="hide = !hide"
+              [attr.aria-label]="'Hide password'"
+              [attr.aria-pressed]="hide"
+              type="button">
+              <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
             </button>
-          </p>
-        </div>
-      </mat-card-content>
-    </mat-card>
+            <mat-error>
+              Your password should contain at least 8 characters.
+            </mat-error>
+          </mat-form-field>
+          <button
+            type="submit"
+            [disabled]="!loginForm.valid"
+            class="btn rounded-full my-6">
+            Log In
+          </button>
+        </form>
+        <p class="text-gray-400 text-center">
+          Dont have an account?
+          <button
+            class="underline text-slate-950 hover:text-slate-700 hover:scale-105"
+            (click)="navToSignUp()">
+            Sign Up
+          </button>
+        </p>
+      </div>
+    </mat-card-content>
+  </mat-card>
 </div>
-
-
