--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-center">
-  <div class="flex flex-col md:w-1/3 gap-2 m-4 text-center md:text-start">
+  <div class="m-4 flex flex-col gap-2 text-center md:w-1/3 md:text-start">
     <h2 class="text-3xl font-bold">
       Discover the joy of seamless travel planning with BonVoyage!
     </h2>
