--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -20,15 +19,17 @@ $bon-voyage-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$bon-voyage-theme: mat.define-light-theme((
-  color: (
-    primary: $bon-voyage-primary,
-    accent: $bon-voyage-accent,
-    warn: $bon-voyage-warn,
-  ),
-  typography: mat.define-typography-config(),
-  density: 0
-));
+$bon-voyage-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $bon-voyage-primary,
+      accent: $bon-voyage-accent,
+      warn: $bon-voyage-warn,
+    ),
+    typography: mat.define-typography-config(),
+    density: 0,
+  )
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -39,5 +40,21 @@ $bon-voyage-theme: mat.define-light-theme((
 @tailwind components;
 @tailwind utilities;
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+.mdc-button__label {
+  text-decoration: underline;
+}
+
+:root {
+  --mdc-snackbar-container-color: #ff4343;
+  --mdc-snackbar-supporting-text-color: #000000 !important;
+  --mat-snack-bar-button-color: #000000 !important;
+}
