--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,32 +1,14 @@
-<h2 class="text-2xl font-bold">Plan a new trip</h2>
-<mat-form-field>
-  <mat-label>Where To? Ex. Paris...</mat-label>
-  <input matInput placeholder="Paris" />
-</mat-form-field>
-
-<h3 class="text-xl font-bold">Add itinerary item</h3>
-<mat-form-field>
-  <mat-label>Activity</mat-label>
-  <input matInput placeholder="Visit Eifel Tower..." />
-</mat-form-field>
-<mat-form-field>
-  <mat-label>Choose a date</mat-label>
-  <input matInput [matDatepicker]="picker" />
-  <mat-hint>MM/DD/YYYY</mat-hint>
-  <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-  <mat-datepicker #picker></mat-datepicker>
-</mat-form-field>
-<mat-form-field>
-  <input
-    matInput
-    name="selected_time_A"
-    [ngxMatTimepicker]="pickerA"
-    placeholder="4:00 PM"
-    readonly />
-  <mat-icon matSuffix (click)="pickerA.open()">watch_later</mat-icon>
-</mat-form-field>
-<ngx-mat-timepicker
-  #pickerA
-  dottedMinutesInGap
-  enableKeyboardInput
-  (timeSet)="onTimeSet($event)" />
+@if (trips$ | async; as trips) {
+  <div class="p-4">
+    @for (trip of trips; track trip.id) {
+      <app-trip-card
+        [tripTitle]="trip.title"
+        [startDate]="trip.startDate"
+        [endDate]="trip.endDate"
+        [totalDuration]="trip.totalDuration"
+        [totalCost]="trip.totalCost"
+        (click)="handleTripClick(trip.title)" />
+    }
+    <button class="btn btn-circle fixed bottom-4 right-4">+</button>
+  </div>
+}
