fix: 🐛 Fixed auth bug where you were redirected when reloading the page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,9 +12,9 @@
       </button>
     </div>
     <div class="flex items-center gap-0 md:gap-4">
-      @if (authService.isLoggedIn) {
+      @if (authService.isLoggedIn()) {
         <button
-          class="btn btn-ghost h-8 min-h-8 text-sm"
+          class="btn btn-ghost h-8 min-h-8 text-sm text-blue-800"
           aria-label="Log in button"
           (click)="signOut()">
           Log Out
@@ -26,13 +26,13 @@
           (click)="navToLogin()">
           Log In
         </button>
+        <button
+          class="btn h-8 min-h-8 bg-blue-400"
+          aria-label="Sign up button"
+          (click)="navToSignup()">
+          Sign Up
+        </button>
       }
-      <button
-        class="btn h-8 min-h-8 bg-blue-400"
-        aria-label="Sign up button"
-        (click)="navToSignup()">
-        Sign Up
-      </button>
     </div>
   </mat-toolbar>
 </p>
