--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 @if (trips$ | async; as trips) {
   <div class="flex flex-col items-center overflow-x-hidden p-4">
-    @for (trip of trips; track trip.id) {
+    @for (trip of trips.trips; track trip.id) {
       <div class="boundary relative flex w-[150%] justify-center">
         <div
           class="h-calc absolute z-[-1] flex w-[60%] overflow-hidden rounded-xl">
@@ -11,7 +11,7 @@
           swipe
           (left)="onSwipeLeft(trip.title)"
           (right)="onSwipeRight(trip.title)"
-          class="w-[60%]"
+          class="w-3/5"
           cdkDrag
           cdkDragLockAxis="x"
           (cdkDragReleased)="resetPosition($event)"
