style: 💄 changed w-[60%] to w-3/5

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
           swipe
           (left)="onSwipeLeft(trip.title)"
           (right)="onSwipeRight(trip.title)"
-          class="w-[60%]"
+          class="w-3/5"
           cdkDrag
           cdkDragLockAxis="x"
           (cdkDragReleased)="resetPosition($event)"
