--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
 @if (trips$ | async; as trips) {
   <div class="flex flex-col items-center overflow-x-hidden p-4">
-    @for (trip of trips.trips; track trip.id) {
+    @for (trip of trips.trips; track trip.docId) {
       <div class="boundary relative flex w-[150%] justify-center">
         <div
-          class="h-calc absolute z-[-1] flex w-[60%] overflow-hidden rounded-xl">
+          class="absolute z-[-1] flex h-calc w-[60%] overflow-hidden rounded-xl">
           <div class="w-1/2 bg-green-500"></div>
           <div class="w-1/2 bg-red-500"></div>
         </div>
@@ -18,11 +18,7 @@
           cdkDragBoundary=".boundary">
           <app-trip-card
             [tripTitle]="trip.title"
-            [startDate]="trip.startDate"
-            [endDate]="trip.endDate"
-            [totalDuration]="trip.totalDuration"
-            [totalCost]="trip.totalCost"
-            (click)="handleTripClick(trip.title)" />
+            (click)="handleTripClick(trip.title, trip.docId)" />
         </div>
       </div>
     }
