--- a/src/app/components/trip-card/trip-card.component.html
+++ b/src/app/components/trip-card/trip-card.component.html
@@ -1,11 +1,19 @@
 <div
   class="mb-4 grid grid-rows-3 gap-2 rounded-xl border-2 border-blue-400 bg-blue-300 p-4">
   <div class="flex justify-between">
-    <div>Start Date - End Date</div>
-    <div>1 day</div>
+    @if (startDate() && endDate()) {
+      <div>{{ startDate() | date }} - {{ endDate() | date }}</div>
+    }
+    @if (duration()) {
+      <div>{{ duration() }} {{ duration() === 1 ? 'day' : 'days' }}</div>
+    }
   </div>
-  <div class="flex justify-center text-2xl">{{ tripTitle() }}</div>
-  <div class="flex justify-end">
-    <div>{{ 100 | currency }}</div>
-  </div>
+  @if (tripTitle()) {
+    <div class="flex justify-center text-2xl">{{ tripTitle() }}</div>
+  }
+  @if (totalCost()) {
+    <div class="flex justify-end">
+      <div>{{ totalCost() | currency }}</div>
+    </div>
+  }
 </div>
