--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -31,7 +31,8 @@
       </div>
     }
     <button
-      class="btn btn-circle fixed bottom-4 right-4 border-2 border-blue-500">
+      class="btn btn-circle fixed bottom-4 right-4 border-2 border-blue-500"
+      (click)="handleAddTripClick()">
       +
     </button>
   </div>
