feat: ✨ Add ability to add and remove activities when creating a trip. Fixed minor bugs.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,15 +17,13 @@
           cdkDragLockAxis="x"
           (cdkDragReleased)="resetPosition($event)"
           cdkDragBoundary=".boundary">
-          @if (
-            trip.startDate && trip.endDate && trip.duration && trip.totalCost
-          ) {
+          @if (trip.startDate && trip.endDate && trip.duration) {
             <app-trip-card
               [tripTitle]="trip.title"
               [startDate]="trip.startDate"
               [endDate]="trip.endDate"
               [duration]="trip.duration"
-              [totalCost]="trip.totalCost" />
+              [totalCost]="trip.totalCost ?? 0" />
           }
         </div>
       </div>
