fix: 🐛 Removed unused code

--- a/src/app/components/alter-trip/alter-trip.component.html
+++ b/src/app/components/alter-trip/alter-trip.component.html
@@ -2,7 +2,7 @@
   <div>Loading...</div>
 } @else {
   <div class="p-4">
-    @if (inputTrip().docId && inputTrip().title) {
+    @if (inputTrip().docId) {
       <h1 class="text-xl font-extrabold">Edit Trip: {{ inputTrip().title }}</h1>
     } @else {
       <h1 class="text-xl font-extrabold">Create a new trip!</h1>
