style: 💄 Changed w-[60%] to w-3/5

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
         @for (trip of trips; track trip.docId) {
           <div class="boundary relative flex w-[150%] justify-center">
             <div
-              class="absolute z-[-1] flex h-calc w-[60%] overflow-hidden rounded-xl">
+              class="absolute z-[-1] flex h-calc w-3/5 overflow-hidden rounded-xl">
               <div class="w-1/2 bg-green-500"></div>
               <div class="w-1/2 bg-red-500"></div>
             </div>
