--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,7 +13,7 @@
             </div>
             <div
               swipe
-              (left)="onSwipeLeft(trip.title)"
+              (left)="onSwipeLeft(trip.docId)"
               (right)="onSwipeRight(trip.title)"
               (onClick)="handleTripClick(trip.title, trip.docId)"
               class="w-3/5"
@@ -38,6 +38,22 @@
           +
         </button>
       </div>
+      <dialog #confirmModal class="modal">
+        <div class="modal-box">
+          <h3 class="text-lg font-bold">Hold on!</h3>
+          <p class="py-4">Are you sure you would like to delete this trip?</p>
+          <div class="modal-action">
+            <div class="flex gap-2">
+              <button class="btn btn-warning" (click)="closeModal()">
+                Cancel
+              </button>
+              <button class="btn btn-error" (click)="deleteTrip()">
+                Delete
+              </button>
+            </div>
+          </div>
+        </div>
+      </dialog>
     } @else {
       <div class="flex flex-col items-center overflow-x-hidden p-4">
         No trips
