fix: 🐛 Currency shown now depends on what the user selected

--- a/src/app/components/itinerary-card/itinerary-card.component.html
+++ b/src/app/components/itinerary-card/itinerary-card.component.html
@@ -17,6 +17,11 @@
   }
 
   <div class="flex justify-end">
-    <div>{{ inputActivity().cost | currency }}</div>
+    <div>
+      {{
+        inputActivity().cost
+          | currency: inputActivity().currency : 'symbol-narrow'
+      }}
+    </div>
   </div>
 </div>
