--- a/src/app/components/trip-card/trip-card.component.html
+++ b/src/app/components/trip-card/trip-card.component.html
@@ -13,6 +13,6 @@
   }
 
   <div class="flex justify-end">
-    <div>{{ totalCost() | currency }}</div>
+    <div>{{ totalCost() | currency: currency() : 'symbol-narrow' }}</div>
   </div>
 </div>
