fix: 🐛 Changed the way the trip form is handled. No longer make use of a FormArray. Each activity added gets an id.

--- a/src/app/components/alter-trip/alter-trip.component.html
+++ b/src/app/components/alter-trip/alter-trip.component.html
@@ -23,9 +23,8 @@
       </mat-form-field>
 
       <h2 class="mb-2 text-lg font-semibold">Itinerary:</h2>
-      @for (activity of tripForm.value.itinerary; track $index) {
+      @for (activity of itinerary; track activity) {
         <app-itinerary-card
-          [indexNumber]="$index"
           [inputActivity]="activity"
           (deleteClicked)="removeActivity($event)" />
       }
