fix: 🐛 Removed need to pass $event for deleteActivity

--- a/src/app/components/alter-trip/alter-trip.component.html
+++ b/src/app/components/alter-trip/alter-trip.component.html
@@ -26,7 +26,7 @@
       @for (activity of itinerary; track activity) {
         <app-itinerary-card
           [inputActivity]="activity"
-          (deleteClicked)="removeActivity($event)" />
+          (deleteClicked)="removeActivity(activity)" />
       }
       <div class="flex flex-wrap gap-4">
         <app-itinerary-form
