fix: 🐛 Removed redundant code.

--- a/src/app/components/itinerary-form/itinerary-form.component.html
+++ b/src/app/components/itinerary-form/itinerary-form.component.html
@@ -119,7 +119,7 @@
           #autosize="cdkTextareaAutosize"
           cdkAutosizeMinRows="1"
           cdkAutosizeMaxRows="5"
-          placeholder="Ex. Remember to pack toothbrush..."
+          placeholder="E.g. Remember to pack toothbrush..."
           formControlName="notes"></textarea>
       </mat-form-field>
 
