--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,6 +64,7 @@ body {
       --mdc-snackbar-container-color: #4caf50;
       --mat-mdc-snack-bar-button-color: black;
       --mdc-snackbar-supporting-text-color: black;
+      --mat-snack-bar-button-color: black;
     }
     &.snackbar-error {
       --mdc-snackbar-container-color: #f53224;
