feat: ✨ Added component and route to view trip details.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,7 +15,7 @@
               swipe
               (left)="onSwipeLeft(trip.docId)"
               (right)="onSwipeRight(trip.title)"
-              (onClick)="handleTripClick(trip.title, trip.docId)"
+              (onClick)="handleTripClick(trip.docId)"
               class="w-3/5"
               cdkDrag
               cdkDragLockAxis="x"
