--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,7 @@
 @if ((loading$ | async) ?? false) {
-  <div>Loading...</div>
+  <div class="flex h-full w-full items-center justify-center pb-[3.5rem]">
+    <mat-spinner></mat-spinner>
+  </div>
 } @else {
   @if (trips$ | async; as trips) {
     @if (trips.length > 0) {
