--- a/src/app/components/trip-details/trip-details.component.html
+++ b/src/app/components/trip-details/trip-details.component.html
@@ -21,13 +21,33 @@
         <h2 class="mb-2 text-xl font-bold">Itinerary:</h2>
         @if (trip.itinerary && trip.itinerary.length > 0) {
           @for (activity of trip.itinerary; track activity) {
-            <app-itinerary-card [inputActivity]="activity"></app-itinerary-card>
+            <app-itinerary-card
+              [inputActivity]="activity"
+              (deleteClicked)="
+                handleDeleteActivityClick(trip, activity)
+              "></app-itinerary-card>
           }
         } @else {
           <p>Your trip is looking quite sketch without any activities 👀</p>
         }
       </div>
     </div>
+    <dialog #confirmModal class="modal">
+      <div class="modal-box">
+        <h3 class="text-lg font-bold">Hold on!</h3>
+        <p class="py-4">Are you sure you would like to delete this activity?</p>
+        <div class="modal-action">
+          <div class="flex gap-2">
+            <button class="btn btn-warning" (click)="closeModal()">
+              Cancel
+            </button>
+            <button class="btn btn-error" (click)="deleteActivity()">
+              Delete
+            </button>
+          </div>
+        </div>
+      </div>
+    </dialog>
   } @else {
     <div class="flex flex-col justify-center p-4">
       <p class="text-wrap text-center">
