--- a/src/app/components/itinerary-details/itinerary-details.component.html
+++ b/src/app/components/itinerary-details/itinerary-details.component.html
@@ -1,1 +1,27 @@
-<p>itinerary-details works!</p>
+@if (loading$ | async; as loading) {
+  <div class="flex h-full w-full items-center justify-center pb-[3.5rem]">
+    <mat-spinner></mat-spinner>
+  </div>
+} @else {
+  <div class="flex flex-col gap-2 p-4">
+    <h1 class="flex items-center gap-2 text-2xl font-bold">
+      {{ activity().title }}
+      @if (activity().tag) {
+        <div class="badge bg-blue-700 p-3 text-white">{{ activity().tag }}</div>
+      }
+    </h1>
+    <div>
+      <p>Start Date: {{ newStartDate() | date }}</p>
+      <p>End Date: {{ newEndDate() | date }}</p>
+      <p>Duration: {{ duration() }} {{ duration() === 1 ? 'day' : 'days' }}</p>
+      <p>
+        Cost:
+        {{ activity().cost | currency: activity().currency : 'symbol-narrow' }}
+      </p>
+      @if (activity().notes) {
+        <p class="mt-4">Notes:</p>
+        <p>{{ activity().notes }}</p>
+      }
+    </div>
+  </div>
+}
