--- a/src/app/components/trip-details/trip-details.component.html
+++ b/src/app/components/trip-details/trip-details.component.html
@@ -1,5 +1,5 @@
 @if ((loading$ | async) ?? false) {
-  <div class="flex h-full w-full items-center justify-center pb-[3.5rem]">
+  <div class="flex h-full w-full items-center justify-center pb-14">
     <mat-spinner></mat-spinner>
   </div>
 } @else {
