WIP: 🚧 Implemented ability to swipe left on a trip to edit it. TODO: Ability to edit an existing activity.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,7 +16,7 @@
             <div
               swipe
               (left)="onSwipeLeft(trip.docId)"
-              (right)="onSwipeRight(trip.title)"
+              (right)="onSwipeRight(trip.docId)"
               (onClick)="handleTripClick(trip.docId)"
               class="w-3/5 cursor-pointer"
               cdkDrag
