--- a/src/app/components/alter-trip/alter-trip.component.html
+++ b/src/app/components/alter-trip/alter-trip.component.html
@@ -4,8 +4,10 @@
   </div>
 } @else {
   <div class="p-4">
-    @if (inputTrip().docId) {
-      <h1 class="text-xl font-extrabold">Edit Trip: {{ inputTrip().title }}</h1>
+    @if (selectedTrip().docId && selectedTrip().docId !== '') {
+      <h1 class="text-xl font-extrabold">
+        Edit Trip: {{ selectedTrip().title }}
+      </h1>
     } @else {
       <h1 class="text-xl font-extrabold">Create a new trip!</h1>
     }
@@ -17,7 +19,7 @@
         <mat-label>Title:</mat-label>
         <input
           type="text"
-          [value]="inputTrip().title"
+          [value]="selectedTrip().title"
           matInput
           placeholder="E.g. Trip to Paris..."
           formControlName="title" />
